<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/single_side_bar"
    android:textColor="@color/white"
    tools:context=".AddContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingBottom="30dp"
            android:text="@string/change_password_headline"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/changePassword_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#886E6E"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:hint="@string/previous_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/changePassword_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#886E6E"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/changePassword_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#886E6E"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnOkChangePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:backgroundTint="#886E6E"
                android:fontFamily="sans-serif-light"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:text="@string/change"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnExitChangePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:backgroundTint="#526A0707"
                android:fontFamily="sans-serif-light"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:text="@string/cencel"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>